// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConstraintsPreview snapshots > should render a center preview with no active ticks 1`] = `
<DocumentFragment>
  <div
    class="_ConstraintsPreview_12ce90"
  >
    <div
      class="_ConstraintsPreview__box_12ce90"
    >
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--top_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--top_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--bottom_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--bottom_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--left_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--left_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--right_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--right_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__node_12ce90"
      >
        <div
          class="_ConstraintsPreview__node__cross_12ce90 _ConstraintsPreview__node__cross--active_12ce90 _ConstraintsPreview__node__cross--locked_12ce90"
        >
          <span
            class="_ConstraintsPreview__node__cross__line_12ce90 _ConstraintsPreview__node__cross__line--horizontal_12ce90 _ConstraintsPreview__node__cross__line--active_12ce90"
          />
        </div>
        <div
          class="_ConstraintsPreview__node__cross_12ce90 _ConstraintsPreview__node__cross--active_12ce90"
        >
          <span
            class="_ConstraintsPreview__node__cross__line_12ce90 _ConstraintsPreview__node__cross__line--vertical_12ce90 _ConstraintsPreview__node__cross__line--active_12ce90"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConstraintsPreview snapshots > should render an explicit right/bottom preview 1`] = `
<DocumentFragment>
  <div
    class="_ConstraintsPreview_12ce90"
  >
    <div
      class="_ConstraintsPreview__box_12ce90"
    >
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--top_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--top_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--bottom_12ce90 _ConstraintsPreview__tick--active_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--bottom_12ce90 _ConstraintsPreview__tick__line--active_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--left_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--left_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--right_12ce90 _ConstraintsPreview__tick--active_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--right_12ce90 _ConstraintsPreview__tick__line--active_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__node_12ce90"
      >
        <div
          class="_ConstraintsPreview__node__cross_12ce90"
        >
          <span
            class="_ConstraintsPreview__node__cross__line_12ce90 _ConstraintsPreview__node__cross__line--horizontal_12ce90"
          />
        </div>
        <div
          class="_ConstraintsPreview__node__cross_12ce90 _ConstraintsPreview__node__cross--locked_12ce90"
        >
          <span
            class="_ConstraintsPreview__node__cross__line_12ce90 _ConstraintsPreview__node__cross__line--vertical_12ce90"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConstraintsPreview snapshots > should render the default left/top preview 1`] = `
<DocumentFragment>
  <div
    class="_ConstraintsPreview_12ce90"
  >
    <div
      class="_ConstraintsPreview__box_12ce90"
    >
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--top_12ce90 _ConstraintsPreview__tick--active_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--top_12ce90 _ConstraintsPreview__tick__line--active_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--bottom_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--bottom_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--left_12ce90 _ConstraintsPreview__tick--active_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--left_12ce90 _ConstraintsPreview__tick__line--active_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__tick_12ce90 _ConstraintsPreview__tick--right_12ce90"
      >
        <span
          class="_ConstraintsPreview__tick__line_12ce90 _ConstraintsPreview__tick__line--right_12ce90"
        />
      </div>
      <div
        class="_ConstraintsPreview__node_12ce90"
      >
        <div
          class="_ConstraintsPreview__node__cross_12ce90"
        >
          <span
            class="_ConstraintsPreview__node__cross__line_12ce90 _ConstraintsPreview__node__cross__line--horizontal_12ce90"
          />
        </div>
        <div
          class="_ConstraintsPreview__node__cross_12ce90 _ConstraintsPreview__node__cross--locked_12ce90"
        >
          <span
            class="_ConstraintsPreview__node__cross__line_12ce90 _ConstraintsPreview__node__cross__line--vertical_12ce90"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
